--- a/travis.yml
+++ b/travis.yml
@@ -11,4 +11,4 @@ notifications:
   email: false
 
 after_success:
-  - julia -e 'cd(Pkg.dir("IncrementalPruning")); import Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'cd(Pkg.dir("PointBasedValueIteration")); import Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
