--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,19 @@
 language: julia
 os:
   - linux
-  - osx
-  - windows
 
 julia:
   - 1
-
+  
 notifications:
   email: false
 
-after_success:
-  - julia -e 'cd(Pkg.dir("PointBasedValueIteration")); import Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+# uncomment the following lines to override the default test script
+script:
+  - git clone https://github.com/JuliaRegistries/General  $(julia -e 'import Pkg; println(joinpath(Pkg.depots1(), "registries", "General"))')
+  - git clone https://github.com/JuliaPOMDP/Registry  $(julia -e 'import Pkg; println(joinpath(Pkg.depots1(), "registries", "JuliaPOMDP"))')
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia --project --color=yes --check-bounds=yes -e 'import Pkg; Pkg.build(); Pkg.test("PointBasedValueIteration"; coverage=true)'
+
+#after_success:
+#  - julia -e 'cd(Pkg.dir("PointBasedValueIteration")); import Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
