--- a/Project.toml
+++ b/Project.toml
@@ -13,3 +13,7 @@ POMDPPolicies = "182e52fb-cfd0-5e46-8c26-fd0667c990f4"
 POMDPSimulators = "e0d0a172-29c6-5d4e-96d0-f262df5d01fd"
 POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 SARSOP = "cef570c6-3a94-5604-96b7-1a5e143043f2"
+
+[compat]
+POMDPs = "0.9"
+julia = "^1.1"
