--- a/Project.toml
+++ b/Project.toml
@@ -8,13 +8,23 @@ BeliefUpdaters = "8bb6e9a1-7d73-552c-a44a-e5dc5634aac4"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 POMDPLinter = "f3bd98c0-eb40-45e2-9eb1-f2763262d755"
 POMDPModelTools = "08074719-1b2a-587c-a292-00f91cc44415"
-POMDPModels = "355abbd5-f08e-5560-ac9e-8b5f2592a0ca"
 POMDPPolicies = "182e52fb-cfd0-5e46-8c26-fd0667c990f4"
-POMDPSimulators = "e0d0a172-29c6-5d4e-96d0-f262df5d01fd"
 POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
+
+[extras]
 SARSOP = "cef570c6-3a94-5604-96b7-1a5e143043f2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+POMDPModels = "355abbd5-f08e-5560-ac9e-8b5f2592a0ca"
+POMDPSimulators = "e0d0a172-29c6-5d4e-96d0-f262df5d01fd"
+
+[targets]
+test = ["SARSOP", "Test", "POMDPModels", "POMDPSimulators"]
+
 
 [compat]
 POMDPs = "0.9"
-julia = "^1.1"
+julia = "1.1"
+BeliefUpdaters = "0.2"
+POMDPLinter = "0.1"
+POMDPModelTools = "0.3"
+POMDPPolicies = "0.3"
