--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ julia:
   
 notifications:
   email: false
+  
+codecov: true
 
 # uncomment the following lines to override the default test script
 script:
