--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,4 @@ script:
 
 after_success:
   - julia -e 'cd(Pkg.dir("PointBasedValueIteration")); import Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'cd(Pkg.dir("PointBasedValueIteration")); import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
