--- a/Project.toml
+++ b/Project.toml
@@ -23,8 +23,8 @@ julia = "1.1"
 [extras]
 POMDPModels = "355abbd5-f08e-5560-ac9e-8b5f2592a0ca"
 POMDPSimulators = "e0d0a172-29c6-5d4e-96d0-f262df5d01fd"
-SARSOP = "cef570c6-3a94-5604-96b7-1a5e143043f2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+POMDPSolve = "a575d7f4-a5df-53f5-8ba4-9d691c1ba8ff"
 
 [targets]
-test = ["SARSOP", "Test", "POMDPModels", "POMDPSimulators"]
+test = ["Test", "POMDPModels", "POMDPSimulators", "POMDPSolve"]
