--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 BeliefUpdaters = "0.2"
 POMDPLinter = "0.1"
 POMDPModelTools = "0.3.2"
-POMDPPolicies = "0.3"
+POMDPPolicies = "0.3, 0.4"
 POMDPs = "0.9"
 julia = "1.1"
 
