--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 
 [compat]
 BeliefUpdaters = "0.2"
+Distributions = "0.24"
 FiniteHorizonPOMDPs = "0.3"
 POMDPLinter = "0.1"
 POMDPModelTools = "0.3.2"
