--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 
 [compat]
 Distributions = "0.24, 0.25"
-FiniteHorizonPOMDPs = "0.3"
+FiniteHorizonPOMDPs = "0.3, 0.4"
 POMDPLinter = "0.1"
 POMDPs = "0.9"
 julia = "1.1"
